# in_the_black

langgraph-pyproject/: .gitignore  README.md  pyproject.toml
langgraph-pyproject/loaders/: create_user.sh  ir_264_loader.py
langgraph-pyproject/my_agent/: agent.py
langgraph-pyproject/my_agent/generators/: statement_of_financial_possition.py  statement_of_profit_or_loss.py  tax_statement.py
langgraph-pyproject/my_agent/model/: account.py  chart_of_accounts.py  document.py  transaction.py  user.py
langgraph-pyproject/my_agent/retrievers/: accepted_anomalies.py  bank_statement_retriever.py  company_insights.py  file_loader.py  get_accounts.py  get_transactions.py  get_user.py  header_filter.py  ir_264.py  metadata.py  property_valuation.py  templates.py  transaction_retriever.py  utils.py
langgraph-pyproject/my_agent/tools/: ask_human.py  asset_maintenance.py  company_overview.py  document_classifier.py  generate_end_of_year_reports.py  (+11 more)
langgraph-pyproject/tests/: conftest.py  test_bank_statement_retriever.py  test_classify_document.py  test_company_overview.py  test_end_of_year_accounts.py  test_file_loader.py  test_get_accounts.py  test_header_filter.py  test_load_transactions.py  test_process_bank_export.py  test_process_bank_statement.py  test_process_vendor_statement.py  test_review_accounts.py  test_save_transactions.py  test_statement_retriever.py
platform/infrastucture/: .gitignore  README.md  __main__.py  api_gateway.py  cognito_user_pool.py  document_upload.py  pdf_converter.py  persistance.py  property_valuation.py  pyproject.toml  requirements.txt
(+101 files in other folders)
